logs/django-jobs.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django-jobs'...
Listing './lib/python3.5/site-packages/django-jobs/templates'...
Listing './lib/python3.5/site-packages/django-jobs/templates/jobs'...
Compiling './lib/python3.5/site-packages/django-jobs/views.py'...
***   File "./lib/python3.5/site-packages/django-jobs/views.py", line 64
    except models.Job,DoesNotExist:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_jobs-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/project'...
Listing './lib/python3.5/site-packages/project/jobs'...
Compiling './lib/python3.5/site-packages/project/jobs/views.py'...
***   File "./lib/python3.5/site-packages/project/jobs/views.py", line 64
    except models.Job,DoesNotExist:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
